[gd_scene load_steps=5 format=2]

[ext_resource path="res://sourcesans.tres" type="DynamicFont" id=1]
[ext_resource path="res://sourcesansbold.tres" type="DynamicFont" id=2]
[ext_resource path="res://itemlistscroll.gd" type="Script" id=3]
[ext_resource path="res://mainmenu_newscenario.gd" type="Script" id=4]

[node name="Panel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="C" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.145098, 0.145098, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="C"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="M" type="MarginContainer" parent="C/V"]
margin_right = 720.0
margin_bottom = 1480.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 50
custom_constants/margin_left = 30
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="VBoxContainer" parent="C/V/M"]
margin_left = 30.0
margin_top = 50.0
margin_right = 690.0
margin_bottom = 1430.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Empty3" type="Label" parent="C/V/M/R"]
margin_right = 660.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CHeader" type="HBoxContainer" parent="C/V/M/R"]
margin_top = 44.0
margin_right = 660.0
margin_bottom = 78.0
size_flags_horizontal = 3

[node name="R" type="CenterContainer" parent="C/V/M/R/CHeader"]
margin_right = 660.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="D" type="HBoxContainer" parent="C/V/M/R/CHeader/R"]
margin_left = 241.0
margin_right = 418.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="C/V/M/R/CHeader/R/D"]
margin_right = 177.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 1 )
text = "Start New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty11" type="Label" parent="C/V/M/R"]
margin_top = 82.0
margin_right = 660.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="Scenarios" type="ItemList" parent="C/V/M/R"]
margin_top = 126.0
margin_right = 660.0
margin_bottom = 326.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Empty12" type="Label" parent="C/V/M/R"]
margin_top = 330.0
margin_right = 660.0
margin_bottom = 370.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="Details" type="RichTextLabel" parent="C/V/M/R"]
margin_top = 374.0
margin_right = 660.0
margin_bottom = 1018.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/bold_font = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true

[node name="Large" type="Label" parent="C/V/M/R"]
margin_top = 1022.0
margin_right = 660.0
margin_bottom = 1062.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1

[node name="Empty13" type="Label" parent="C/V/M/R"]
margin_top = 1066.0
margin_right = 660.0
margin_bottom = 1106.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="Onboarding" type="CheckButton" parent="C/V/M/R"]
margin_top = 1110.0
margin_right = 660.0
margin_bottom = 1152.0
custom_fonts/font = ExtResource( 1 )
text = "Onboarding"

[node name="Empty14" type="Label" parent="C/V/M/R"]
margin_top = 1156.0
margin_right = 660.0
margin_bottom = 1196.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="CButtons2" type="HBoxContainer" parent="C/V/M/R"]
margin_top = 1200.0
margin_right = 660.0
margin_bottom = 1380.0
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="Decision3" type="Button" parent="C/V/M/R/CButtons2"]
margin_right = 305.0
margin_bottom = 180.0
rect_min_size = Vector2( 210, 180 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Back"

[node name="Decision4" type="Button" parent="C/V/M/R/CButtons2"]
margin_left = 355.0
margin_right = 660.0
margin_bottom = 180.0
rect_min_size = Vector2( 210, 180 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Start"
[connection signal="item_selected" from="C/V/M/R/Scenarios" to="." method="_on_Scenarios_item_selected"]
[connection signal="pressed" from="C/V/M/R/CButtons2/Decision3" to="." method="_on_Decision3_pressed"]
[connection signal="pressed" from="C/V/M/R/CButtons2/Decision4" to="." method="_on_Decision4_pressed"]
